Fix filter panel: remove height:0 that collapsed body, use flex overflow on two-col instead

--- a/style.scss
+++ b/style.scss
@@ -1015,7 +1015,6 @@ hr {
   padding: 0;
   flex: 1 1 auto;
   min-height: 0;
-  height: 0;
 }
 
 /* Two-column layout: sidebar + detail */
@@ -1023,7 +1022,7 @@ hr {
   display: flex;
   flex: 1 1 auto;
   min-height: 0;
-  height: 100%;
+  overflow: hidden;
 }
 
 /* Left sidebar */
